--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
-  "name": "CS5513-Week04-DK6",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "week4demo",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "next": "^11.1.2"
+    "got": "^9.6.0",
+    "next": "11.1.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "eslint": "7.32.0",
+    "eslint-config-next": "11.1.2"
   }
 }
